[package]
name = "serde_iter" # underscore for consistency with other serde-related crates
version = "0.1.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/serde-iter"
homepage = "https://github.com/SOF3/serde-iter"
readme = "README.md"
description = "Iterator wrappers for sequence/map serialization"

[features]
default = ["seq", "map", "once"]
seq = []
map = []
once = []

[dependencies]
serde = "1.0.104"

[dev-dependencies]
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
